@@ -16,7 +16,7 @@ import fitaview.utils.Pair;
 public class TopDownTransitionsTest
 {
     private TopDownTransitions<Pair<String, String>> testObject;
-    private Variable v = new Variable(0, "A", "B", "C", "D");
+    private final Variable variable = new Variable(0, "A", "B", "C", "D");
 
     public TopDownTransitionsTest()
             throws IllegalVariableValueException
@@ -28,11 +28,12 @@ public class TopDownTransitionsTest
             throws Exception
     {
         testObject = new TopDownTransitions<>(this::pairFunction, this::pairFunction);
-        testObject.add(v, Pair.make("A", "0"), Pair.make("B", "C"));
-        testObject.add(v, Pair.make(Wildcard.EVERY_VALUE, "1"), Pair.make("D", "D"));
-        testObject.add(v, Pair.make("D", "2"), Pair.make(Wildcard.SAME_VALUE, Wildcard.SAME_VALUE));
-        testObject.add(v, Pair.make("C", "3"), Pair.make("B", "A"));
-        testObject.add(v, Pair.make(Wildcard.EVERY_VALUE, "3"), Pair.make("C", "C"));
+        testObject.add(variable, Pair.make("A", "0"), Pair.make("B", "C"));
+        testObject.add(variable, Pair.make(Wildcard.EVERY_VALUE, "1"), Pair.make("D", "D"));
+        testObject.add(variable, Pair.make("D", "2"),
+                       Pair.make(Wildcard.SAME_VALUE, Wildcard.SAME_VALUE));
+        testObject.add(variable, Pair.make("C", "3"), Pair.make("B", "A"));
+        testObject.add(variable, Pair.make(Wildcard.EVERY_VALUE, "3"), Pair.make("C", "C"));
     }
 
     @After
@@ -42,105 +43,103 @@ public class TopDownTransitionsTest
     }
 
     @Test
-    public void testContainsKeyWhenInnerDirectKey()
+    public void containsKey_WhenInnerDirectKey()
     {
-        boolean result = testObject.containsKey(v, Pair.make("A", "0"));
+        boolean result = testObject.containsKey(variable, Pair.make("A", "0"));
 
         Assert.assertTrue(result);
     }
 
     @Test
-    public void testContainsKeyWhenInnerWildcardKey()
+    public void containsKey_WhenInnerWildcardKey()
     {
-        boolean result = testObject.containsKey(v, Pair.make(Wildcard.EVERY_VALUE, "1"));
+        boolean result = testObject.containsKey(variable, Pair.make(Wildcard.EVERY_VALUE, "1"));
 
         Assert.assertTrue(result);
     }
 
     @Test
-    public void testContainsKeyWhenOuterKey()
+    public void containsKey_WhenOuterKey()
     {
-        boolean result = testObject.containsKey(v, Pair.make("E", "0"));
+        boolean result = testObject.containsKey(variable, Pair.make("E", "0"));
 
         Assert.assertFalse(result);
     }
 
     @Test
-    public void testContainsKeyWhenOuterWildcardKey()
+    public void containsKey_WhenOuterWildcardKey()
     {
-        boolean result = testObject.containsKey(v, Pair.make("E", Wildcard.EVERY_VALUE));
+        boolean result = testObject.containsKey(variable, Pair.make("E", Wildcard.EVERY_VALUE));
 
         Assert.assertFalse(result);
     }
 
     @Test
-    public void testContainsEntryWhenInnerKey()
+    public void containsEntry_WhenInnerKey()
     {
-        boolean result = testObject.containsEntry(v, Pair.make("A", "0"));
+        boolean result = testObject.containsEntry(variable, Pair.make("A", "0"));
 
         Assert.assertTrue(result);
     }
 
     @Test
-    public void testContainsEntryWhenInnerWildcardKey()
+    public void containsEntry_WhenInnerWildcardKey()
     {
-        boolean result = testObject.containsEntry(v, Pair.make("C", "1"));
+        boolean result = testObject.containsEntry(variable, Pair.make("C", "1"));
 
         Assert.assertTrue(result);
     }
 
     @Test
-    public void testContainsEntryWhenOuterKey()
+    public void containsEntry_WhenOuterKey()
     {
-        boolean result = testObject.containsEntry(v, Pair.make("E", "0"));
+        boolean result = testObject.containsEntry(variable, Pair.make("E", "0"));
 
         Assert.assertFalse(result);
     }
 
     @Test
-    public void testContainsEntryWhenKeyHasNull()
+    public void containsEntry_WhenKeyHasNull()
     {
-        boolean result = testObject.containsEntry(v, Pair.make(null, "0"));
+        boolean result = testObject.containsEntry(variable, Pair.make(null, "0"));
 
         Assert.assertFalse(result);
     }
 
     @Test
-    public void testAddWhenDirectKey()
+    public void add_WhenDirectKey()
     {
         try
         {
-            testObject.add(v, Pair.make("B", "10"), Pair.make("A", "A"));
+            testObject.add(variable, Pair.make("B", "10"), Pair.make("A", "A"));
         }
         catch(DuplicatedTransitionException | IllegalTransitionException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
-        boolean result = testObject.containsKey(v, Pair.make("B", "10"));
+        boolean result = testObject.containsKey(variable, Pair.make("B", "10"));
 
         Assert.assertTrue(result);
     }
 
     @Test
-    public void testAddWhenWildcardKey()
+    public void add_WhenWildcardKey()
     {
         try
         {
-            testObject.add(v, Pair.make(Wildcard.EVERY_VALUE, "11"), Pair.make("B", "B"));
+            testObject.add(variable, Pair.make(Wildcard.EVERY_VALUE, "11"), Pair.make("B", "B"));
         }
         catch(DuplicatedTransitionException | IllegalTransitionException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
-        boolean result = testObject.containsKey(v, Pair.make(Wildcard.EVERY_VALUE, "11"));
-        boolean result0 = testObject.containsEntry(v, Pair.make("A", "11"));
-        boolean result1 = testObject.containsEntry(v, Pair.make("B", "11"));
-        boolean result2 = testObject.containsEntry(v, Pair.make("C", "11"));
-        boolean result3 = testObject.containsEntry(v, Pair.make("D", "11"));
+        boolean result = testObject.containsKey(variable, Pair.make(Wildcard.EVERY_VALUE, "11"));
+        boolean result0 = testObject.containsEntry(variable, Pair.make("A", "11"));
+        boolean result1 = testObject.containsEntry(variable, Pair.make("B", "11"));
+        boolean result2 = testObject.containsEntry(variable, Pair.make("C", "11"));
+        boolean result3 = testObject.containsEntry(variable, Pair.make("D", "11"));
 
         Assert.assertTrue(result);
         Assert.assertTrue(result0);
@@ -150,17 +149,16 @@ public class TopDownTransitionsTest
     }
 
     @Test(expected = DuplicatedTransitionException.class)
-    public void testAddWhenDuplicated()
+    public void add_WhenDuplicated()
             throws DuplicatedTransitionException
     {
         try
         {
-            testObject.add(v, Pair.make("A", "0"), Pair.make("B", "C"));
+            testObject.add(variable, Pair.make("A", "0"), Pair.make("B", "C"));
         }
         catch(IllegalTransitionException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
     }
 
@@ -171,12 +169,11 @@ public class TopDownTransitionsTest
 
         try
         {
-            result = testObject.getAll(v, Pair.make("C", "3"));
+            result = testObject.getAll(variable, Pair.make("C", "3"));
         }
         catch(NoSuchTransitionException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         Assert.assertNotNull(result);
@@ -186,32 +183,31 @@ public class TopDownTransitionsTest
     }
 
     @Test(expected = NoSuchTransitionException.class)
-    public void testGetAllWhenKeyHasNull()
+    public void getAll_WhenKeyHasNull()
             throws NoSuchTransitionException
     {
-        testObject.getAll(v, Pair.make(null, "0"));
+        testObject.getAll(variable, Pair.make(null, "0"));
     }
 
     @Test(expected = NoSuchTransitionException.class)
-    public void testGetAllWhenKeyHasNoEntry()
+    public void getAll_WhenKeyHasNoEntry()
             throws NoSuchTransitionException
     {
-        testObject.getAll(v, Pair.make("C", "0"));
+        testObject.getAll(variable, Pair.make("C", "0"));
     }
 
     @Test
-    public void testGetMatchedWhenKeyDirectlyInside()
+    public void getMatched_WhenKeyDirectlyInside()
     {
         Pair<String, String> result = null;
 
         try
         {
-            result = testObject.getMatched(v, Pair.make("A", "0"));
+            result = testObject.getMatched(variable, Pair.make("A", "0"));
         }
         catch(NoSuchTransitionException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         Assert.assertNotNull(result);
@@ -219,18 +215,17 @@ public class TopDownTransitionsTest
     }
 
     @Test
-    public void testGetMatchedWhenKeyExpectsWildcardInside()
+    public void getMatched_WhenKeyExpectsWildcardInside()
     {
         Pair<String, String> result = null;
 
         try
         {
-            result = testObject.getMatched(v, Pair.make("B", "1"));
+            result = testObject.getMatched(variable, Pair.make("B", "1"));
         }
         catch(NoSuchTransitionException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         Assert.assertNotNull(result);
@@ -238,18 +233,17 @@ public class TopDownTransitionsTest
     }
 
     @Test
-    public void testGetMatchedWhenWildcardInValue()
+    public void getMatched_WhenWildcardInValue()
     {
         Pair<String, String> result = null;
 
         try
         {
-            result = testObject.getMatched(v, Pair.make("D", "2"));
+            result = testObject.getMatched(variable, Pair.make("D", "2"));
         }
         catch(NoSuchTransitionException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         Assert.assertNotNull(result);
@@ -257,17 +251,17 @@ public class TopDownTransitionsTest
     }
 
     @Test(expected = NoSuchTransitionException.class)
-    public void testGetMatchedWhenKeyHasNull()
+    public void getMatched_WhenKeyHasNull()
             throws NoSuchTransitionException
     {
-        testObject.getMatched(v, Pair.make(null, "0"));
+        testObject.getMatched(variable, Pair.make(null, "0"));
     }
 
     @Test(expected = NoSuchTransitionException.class)
-    public void testGetMatchedWhenKeyHasNoEntry()
+    public void getMatched_WhenKeyHasNoEntry()
             throws NoSuchTransitionException
     {
-        testObject.getMatched(v, Pair.make("C", "0"));
+        testObject.getMatched(variable, Pair.make("C", "0"));
     }
 
     @Test
@@ -276,15 +270,15 @@ public class TopDownTransitionsTest
         Map<Pair<Variable, String>, String> result = testObject.convertToStringMap();
         Map<Pair<Variable, String>, String> expected = new HashMap<>();
 
-        expected.put(Pair.make(v, pairFunction(Pair.make("A", "0"))),
+        expected.put(Pair.make(variable, pairFunction(Pair.make("A", "0"))),
                      pairFunction(Pair.make("B", "C")));
-        expected.put(Pair.make(v, pairFunction(Pair.make(Wildcard.EVERY_VALUE, "1"))),
+        expected.put(Pair.make(variable, pairFunction(Pair.make(Wildcard.EVERY_VALUE, "1"))),
                      pairFunction(Pair.make("D", "D")));
-        expected.put(Pair.make(v, pairFunction(Pair.make("D", "2"))),
+        expected.put(Pair.make(variable, pairFunction(Pair.make("D", "2"))),
                      pairFunction(Pair.make(Wildcard.SAME_VALUE, Wildcard.SAME_VALUE)));
-        expected.put(Pair.make(v, pairFunction(Pair.make("C", "3"))),
+        expected.put(Pair.make(variable, pairFunction(Pair.make("C", "3"))),
                      pairFunction(Pair.make("B", "A")));
-        expected.put(Pair.make(v, pairFunction(Pair.make(Wildcard.EVERY_VALUE, "3"))),
+        expected.put(Pair.make(variable, pairFunction(Pair.make(Wildcard.EVERY_VALUE, "3"))),
                      pairFunction(Pair.make("C", "C")));
 
         Assert.assertNotNull(result);
@@ -294,6 +288,6 @@ public class TopDownTransitionsTest
 
     private String pairFunction(Pair<String, String> pair)
     {
-        return String.format("[ %s # %s ]", pair.getFirst(), pair.getSecond());
+        return "[ %s # %s ]".formatted(pair.getFirst(), pair.getSecond());
     }
 }
