@@ -17,32 +17,32 @@ import fitaview.tree.TreeNode;
 public class TopDownLevelTest
 {
     private TopDownLevel testObject;
-    private TreeNode finiteNode13 = new StandardNode("13", 13);
-    private TreeNode finiteNode12 = new StandardNode("12", 12);
-    private TreeNode finiteNode11 = new StandardNode("11", 11);
-    private TreeNode finiteNode10 = new StandardNode("10", 10);
-    private TreeNode finiteNode7 = new StandardNode("7", 7);
-    private TreeNode finiteNode6 = new StandardNode("6", 6, finiteNode13, finiteNode12);
-    private TreeNode finiteNode5 = new StandardNode("5", 5, finiteNode11, finiteNode10);
-    private TreeNode finiteNode4 = new StandardNode("4", 4);
-    private TreeNode finiteNode3 = new StandardNode("3", 3, finiteNode7, finiteNode6);
-    private TreeNode finiteNode2 = new StandardNode("2", 2, finiteNode5, finiteNode4);
-    private TreeNode finiteNode1 = new StandardNode("1", 1, finiteNode3, finiteNode2);
+    private final TreeNode finiteNode13 = new StandardNode("13", 13);
+    private final TreeNode finiteNode12 = new StandardNode("12", 12);
+    private final TreeNode finiteNode11 = new StandardNode("11", 11);
+    private final TreeNode finiteNode10 = new StandardNode("10", 10);
+    private final TreeNode finiteNode7 = new StandardNode("7", 7);
+    private final TreeNode finiteNode4 = new StandardNode("4", 4);
+    private final TreeNode finiteNode6 = new StandardNode("6", 6, finiteNode13, finiteNode12);
+    private final TreeNode finiteNode3 = new StandardNode("3", 3, finiteNode7, finiteNode6);
+    private final TreeNode finiteNode5 = new StandardNode("5", 5, finiteNode11, finiteNode10);
+    private final TreeNode finiteNode2 = new StandardNode("2", 2, finiteNode5, finiteNode4);
+    private final TreeNode finiteNode1 = new StandardNode("1", 1, finiteNode3, finiteNode2);
 
-    private TreeNode infiniteNode13 = new StandardNode("13", 13);
-    private TreeNode infiniteNode12 = new StandardNode("12", 12);
-    private TreeNode infiniteNode11 = new StandardNode("11", 11);
-    private TreeNode infiniteNode7 = new StandardNode("7", 7);
-    private TreeNode infiniteNode6 = new StandardNode("6", 6, infiniteNode13, infiniteNode12);
-    private TreeNode infiniteNode3 = new StandardNode("3", 3, infiniteNode7, infiniteNode6);
-    private RepeatNode infiniteNode2 = new RepeatNode("2", 2);
-    private RecNode infiniteNode4 = new RecNode(infiniteNode2, 4);
-    private RecNode infiniteNode10 = new RecNode(infiniteNode2, 10);
-    private TreeNode infiniteNode5 = new StandardNode("5", 5, infiniteNode11, infiniteNode10);
-    private TreeNode infiniteNode1 = new StandardNode("1", 1, infiniteNode3, infiniteNode2);
+    private final TreeNode infiniteNode13 = new StandardNode("13", 13);
+    private final TreeNode infiniteNode12 = new StandardNode("12", 12);
+    private final TreeNode infiniteNode11 = new StandardNode("11", 11);
+    private final TreeNode infiniteNode7 = new StandardNode("7", 7);
+    private final RepeatNode infiniteNode2 = new RepeatNode("2", 2);
+    private final TreeNode infiniteNode6 = new StandardNode("6", 6, infiniteNode13, infiniteNode12);
+    private final TreeNode infiniteNode3 = new StandardNode("3", 3, infiniteNode7, infiniteNode6);
+    private final TreeNode infiniteNode1 = new StandardNode("1", 1, infiniteNode3, infiniteNode2);
+    private final RecNode infiniteNode4 = new RecNode(infiniteNode2, 4);
+    private final RecNode infiniteNode10 = new RecNode(infiniteNode2, 10);
+    private final TreeNode infiniteNode5 = new StandardNode("5", 5, infiniteNode11, infiniteNode10);
 
     public TopDownLevelTest()
-        throws NodeHasParentException
+            throws NodeHasParentException
     {
         infiniteNode2.setRight(infiniteNode4);
         infiniteNode2.setLeft(infiniteNode5);
@@ -61,7 +61,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testNextWhenFiniteTree()
+    public void next_WhenFiniteTree()
     {
         ArrayList<Object[]> result = new ArrayList<>();
 
@@ -87,7 +87,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testNextWhenInfiniteTree()
+    public void next_WhenInfiniteTree()
     {
         ArrayList<Object[]> result = new ArrayList<>();
 
@@ -119,7 +119,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testNextWhenRecursiveContinuation()
+    public void next_WhenRecursiveContinuation()
     {
 
         ArrayList<Object[]> resultFirst = new ArrayList<>();
@@ -149,8 +149,7 @@ public class TopDownLevelTest
         }
         catch(RecursiveContinuationException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         while(testObject.hasNext())
@@ -169,15 +168,16 @@ public class TopDownLevelTest
                                       {infiniteNode7, infiniteNode6, infiniteNode5},
                                       {infiniteNode13, infiniteNode12, infiniteNode11}};
 
-        TreeNode[][] expectedSecond = {{infiniteNode4}, {infiniteNode5}, {infiniteNode11},
-                                       {infiniteNode10}, {infiniteNode5}, {infiniteNode11}};
+        TreeNode[][] expectedSecond =
+                {{infiniteNode4}, {infiniteNode5}, {infiniteNode11}, {infiniteNode10},
+                 {infiniteNode5}, {infiniteNode11}};
 
         Assert.assertArrayEquals(expectedFirst, resultFirst.toArray());
         Assert.assertArrayEquals(expectedSecond, resultSecond.toArray());
     }
 
     @Test(expected = NoSuchElementException.class)
-    public void testNextWhenOutOfBounds()
+    public void next_WhenOutOfBounds()
     {
         testObject.initialize(finiteNode1);
 
@@ -201,7 +201,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testInitializeWhenDoubleInvoke()
+    public void initialize_WhenDoubleInvoke()
     {
         testObject.initialize(finiteNode1);
         testObject.initialize(finiteNode2);
@@ -214,7 +214,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testHasNextWhenEmpty()
+    public void hasNext_WhenEmpty()
     {
         boolean result = testObject.hasNext();
 
@@ -222,7 +222,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testHasNextWhenNotEmpty()
+    public void hasNext_WhenNotEmpty()
     {
         testObject.initialize(finiteNode11);
 
@@ -232,7 +232,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testCanContinueWhenTraversingEnded()
+    public void canContinue_WhenTraversingEnded()
     {
         testObject.initialize(infiniteNode1);
 
@@ -250,7 +250,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testCanContinueWhenTraversingInProgress()
+    public void canContinue_WhenTraversingInProgress()
     {
         testObject.initialize(infiniteNode1);
         testObject.next();
@@ -260,7 +260,7 @@ public class TopDownLevelTest
     }
 
     @Test
-    public void testContinueRecursiveWhenTraversingEnded()
+    public void continueRecursive_WhenTraversingEnded()
     {
         testObject.initialize(infiniteNode1);
 
@@ -279,8 +279,7 @@ public class TopDownLevelTest
         }
         catch(RecursiveContinuationException e)
         {
-            e.printStackTrace();
-            Assert.fail(String.format("Unexpected exception %s", e.getClass().getSimpleName()));
+            Assert.fail("Unexpected exception %s".formatted(e.getClass().getSimpleName()));
         }
 
         Assert.assertTrue(testObject.hasNext());
@@ -288,8 +287,8 @@ public class TopDownLevelTest
     }
 
     @Test(expected = RecursiveContinuationException.class)
-    public void testContinueRecursiveWhenTraversingInProgress()
-        throws RecursiveContinuationException
+    public void continueRecursive_WhenTraversingInProgress()
+            throws RecursiveContinuationException
     {
         testObject.initialize(infiniteNode1);
         testObject.next();
